--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "reactflow": "^11.11.4",
+    "resend": "^6.9.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
