--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
     "geist": "^1.5.1",
     "nanoid": "^5.1.6",
     "next": "16.1.4",
